[tool.poetry]
name = "impala"
version = "0.1.0"
description = ""
authors = ["Ethan Brooks <ethanabrooks@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
dm-reverb-nightly = "^0.3.0-alpha.20210701"
tfp-nightly = "^0.14.0-alpha.20210630"
dm-haiku = "^0.0.4"
jax = "^0.2.16"
dm-acme = {extras = ["envs", "jax"], version = "^0.2.1"}
tf-nightly-cpu = {url = "https://files.pythonhosted.org/packages/80/c3/3e276aca325a81ad61eaeaa80e74565df035f3c8aa462f758a99a2bbc6d7/tf_nightly_cpu-2.7.0.dev20210701-cp38-cp38-manylinux2010_x86_64.whl"}
jaxlib = {url = "https://storage.googleapis.com/jax-releases/cuda112/jaxlib-0.1.65+cuda112-cp38-none-manylinux2010_x86_64.whl"}
optax = "^0.0.8"
pytz = "^2021.1"
dm-sonnet = "^2.0.0"
trfl = "^1.1.0"

[tool.poetry.dev-dependencies]
ipython = "^7.25.0"
ipdb = "^0.13.9"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
